# VarenizerWeb

./: App.tsx  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
