[package]
name = "varenizer"
version = "1.0.0"
description = "Advanced File Security & Malware Detection"
authors = ["Varenizer Team"]
license = "MIT"
repository = "https://github.com/varenizer/varenizer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-window = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]